# pizh2311_zhuravleva

./: README.md  task-1-02.py
labwork1/: test.txt  wordcount.cpp
labwork2/: README.md
labwork2/lib/: number.cpp  number.h
labwork3/: CMakeLists.txt  input.tsv  main.cpp
labwork5/lib/: ArgParser.cpp  ArgParser.h
labwork5/tests/: argparser_test.cpp
labwork6/lib/: parser.cpp  parser.h
labwork6/tests/: test_format.cpp
snake/: README.md  the_snake.py
task-1/: README.md
task-10/: README.md  task-10.py
task-11/: README.md  task-11.py
task-12/: README.md  task-12.py  task-12_module.py
task-2/: README.md
task-3/: README.md  task-3.py
task-4/: README.md  task-4.py
task-5/: README.md  task-5.py
task-6/: README.md  task-6.py
task-7/: README.md
task-8/: README.md  task-8.py
task-9/: README.md  task-9.py
week-1/: readme.md  task-10.py  task-11.py  task-2.py  task-5.py  task-6.py  task-7.py  task-9.py
week-2/: readme.md  task-1.py
week-3/pizza/: main.py  order.py  pizza.py  readme.md  terminal.py
week-3/roman/: main.py  readme.md  roman.py
week-4/class/: date.py  date1.json  main.py  readme.md
week-4/deposit/: deposit.py  main.py  readme.md
week-5/collection/: DateCollection.py  date.py  dates.json  main.py  readme.md
week-5/hierarchy/: main.py  readme.md  transaction.py
